--- a/css/SerokSSR.css
+++ b/css/SerokSSR.css
@@ -44,7 +44,7 @@ body {
 .headPhoto {
     width: 8rem;
     height: 8rem;
-    background: url(https://q1.qlogo.cn/g?b=qq&nk=1656071287&s=640) no-repeat;
+    background: url(https://cdn.jsdelivr.net/gh/SerokSSR/cdn2/k16.png) no-repeat;
     background-size: cover;
     border-radius: 50%;
     position: relative;
@@ -195,7 +195,7 @@ body {
 .cmd .title {
     width: 100%;
     height: 25px;
-    background-color: #F1F1F1;
+    background-color: #E1E1E1;
     /*background-image: linear-gradient(to top, rgb(184, 184, 184), white);*/
     font-size: 14px;
     line-height: 25px;
