--- a/css/SerokSSR.css
+++ b/css/SerokSSR.css
@@ -142,7 +142,7 @@ body {
 }
 
 .meBox-Button a {
-    display: inline-block;
+    display: block;
     float: left;
     width: 158px;
     height: 50px;
